--- a/project/calc.html
+++ b/project/calc.html
@@ -19,7 +19,11 @@ input[type=button] {
     cursor: pointer;
     min-width:78px
 }
-form{width:315px}
+form{ width: 315px;
+    margin: 0 auto;
+    }
+    h2{ width: 315px;
+    margin: 0 auto;margin-bottom: 15px;}
 </style>
 
 <h2>Calculator</h2>
